네이버 영화 css만

--- a/네이버영화css.html
+++ b/네이버영화css.html
@@ -6,7 +6,7 @@
     <title>네이버 영화</title>
     <style>
         :root {
-            --color-main: #356057;
+            --color-main: #2a576f;
             --color-sub: #eef4f8;
             --color-black: #000;
             --color-border:#e9e9ec;
@@ -25,7 +25,7 @@
             --font-mini: 10px;
         }
         * {margin:0;padding:0;list-style: none;text-decoration: none;box-sizing: border-box;color: inherit;}
-        .movieWrap {display: none;font-size: var(--font-basic);color: var(--color-black);}
+        .movieWrap {font-size: var(--font-basic);color: var(--color-black);}
         .movieWrap input {display: none;}
         /* 영화 상단 */
         .movieWrap .movie-top {background-color:var(--color-main);overflow: hidden;}
@@ -122,8 +122,8 @@
         <input type="radio" name="cont-open-btn" id="contOpenBtn4">
         <div class="movie-top">
             <div class="title-wrapper">
-                <div><h2>영화</h2><span>상영중</span></div>
-                <p>영화 | 장르 | 2024</p>
+                <div><h2>파묘</h2><span>상영중</span></div>
+                <p>영화 | Exhuma | 2024</p>
             </div><!--title-wraper-->
             <div class="menu-list">
                 <label for="contOpenBtn1" class="menu-item">소개</label>
@@ -135,38 +135,37 @@
         <div class="cont-wrapper">
             <div class="cont-item info1">
                 <div class="movie-wrapper">
-                    <iframe src="#"></iframe>
+                    <iframe src="https://www.youtube.com/embed/rjW9E1BR_30?si=ihgsOueEQ7NsJt4J&amp;controls=0"></iframe>
                     <div></div><!--txt-->
                 </div><!--movie-wrapper-->
                 <div class="info-wrapper">
                     <div class="summary-info">
                         <div class="text">
-                            <p><span>개요</span>장르 | 대한민국 | 00분</p>
+                            <p><span>개요</span>미스터리 | 대한민국 | 134분</p>
                             <p><span>개봉</span>2024.02.22</p>
                         </div><!--text-->
                         <div class="poster">
-                            <img src="#">
+                            <img src="images/파묘봉길.jpeg">
                         </div><!--poster-->
                     </div><!--summary-info-->
                     <div class="details-info">
                         <div class="story">
                             <input type="checkbox" id="moreBtn">
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                            </p>
+                            <p>미국 LA, 거액의 의뢰를 받은 무당 ‘화림’(김고은)과 ‘봉길’(이도현)은 기이한 병이 대물림되는 집안의 장손을 만난다. 조상의 묫자리가 화근임을 알아챈 ‘화림’은 이장을 권하고, 돈 냄새를 맡은 최고의 풍수사 ‘상덕’(최민식)과 장의사 ‘영근’(유해진)이 합류한다. “전부 잘 알 거야… 묘 하나 잘못 건들면 어떻게 되는지” 절대 사람이 묻힐 수 없는 악지에 자리한 기이한 묘. ‘상덕’은 불길한 기운을 느끼고 제안을 거절하지만, ‘화림’의 설득으로 결국 파묘가 시작되고… 나와서는 안될 것이 나왔다.</p>
                             <label for="moreBtn"><span class="more">더보기</span><span class="more hide">접기</span></label>
                         </div><!--story-->
                         <div class="review">
                             <div>
-                                <span>순위 | 누적 관객수</span>
-                                <p>1위 / 00만명</p>
+                                <span>순위|누적 관객수</span>
+                                <p>1위 / 603만명</p>
                             </div>
                             <div>
                                 <span>실관람객 평점</span>
-                                <p><span class="star">★</span>10.00</p>
+                                <p><span class="star">★</span>8.24</p>
                             </div>
                             <div>
                                 <span>네티즌 평점</span>
-                                <p><span class="star">★</span>10.00</p>
+                                <p><span class="star">★</span>8.05</p>
                             </div>
                         </div><!--review-->
                         <div class="booking">
@@ -182,14 +181,14 @@
                     <div class="basic">
                         <div class="text">
                             <p><span>개봉</span>2024.02.22</p>
-                            <p><span>등급</span>00세 관람가</p>
-                            <p><span>장르</span>장르</p>
+                            <p><span>등급</span>15세 관람가</p>
+                            <p><span>장르</span>미스터리, 공포</p>
                             <p><span>국가</span>대한민국</p>
-                            <p><span>러닝타임</span>00분</p>
-                            <p><span>배급</span>(주)회사</p>
+                            <p><span>러닝타임</span>134분</p>
+                            <p><span>배급</span>(주)쇼박스</p>
                         </div><!--text-->
                         <div class="poster">
-                            <img src="#"">
+                            <img src="images/파묘봉길.jpeg">
                         </div><!--poster-->
                     </div><!--basic-->
                     <div class="booking">
@@ -212,10 +211,10 @@
                         <div class="people">
                             <a href="#">
                                 <div class="photo">
-                                    <img src="#">
+                                    <img src="images/파묘프로필.jpeg">
                                 </div><!--photo-->
                                 <div class="txt">
-                                    <p>감독</p>
+                                    <p>장재현</p>
                                     <span>감독</span>
                                 </div><!--txt-->
                             </a>
@@ -226,56 +225,65 @@
                         <div class="people">
                             <a href="#">
                                 <div class="photo">
-                                    <img src="#">
+                                    <img src="images/파묘프로필.jpeg">
                                 </div><!--photo-->
                                 <div class="txt">
-                                    <p>배우</p>
-                                    <span>배우 역</span>
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
                                 </div><!--txt-->
                             </a>
                             <a href="#">
                                 <div class="photo">
-                                    <img src="#">
+                                    <img src="images/파묘프로필.jpeg">
                                 </div><!--photo-->
                                 <div class="txt">
-                                    <p>배우</p>
-                                    <span>배우 역</span>
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
                                 </div><!--txt-->
                             </a>
                             <a href="#">
                                 <div class="photo">
-                                    <img src="#">
+                                    <img src="images/파묘프로필.jpeg">
                                 </div><!--photo-->
                                 <div class="txt">
-                                    <p>배우</p>
-                                    <span>배우 역</span>
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
                                 </div><!--txt-->
                             </a>
                             <a href="#">
                                 <div class="photo">
-                                    <img src="#">
+                                    <img src="images/파묘프로필.jpeg">
                                 </div><!--photo-->
                                 <div class="txt">
-                                    <p>배우</p>
-                                    <span>배우 역</span>
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
                                 </div><!--txt-->
                             </a>
                             <a href="#">
                                 <div class="photo">
-                                    <img src="#">
+                                    <img src="images/파묘프로필.jpeg">
                                 </div><!--photo-->
                                 <div class="txt">
-                                    <p>배우</p>
-                                    <span>배우 역</span>
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
                                 </div><!--txt-->
                             </a>
                             <a href="#">
                                 <div class="photo">
-                                    <img src="#">
+                                    <img src="images/파묘프로필.jpeg">
                                 </div><!--photo-->
                                 <div class="txt">
-                                    <p>배우</p>
-                                    <span>배우 역</span>
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
+                                </div><!--txt-->
+                            </a>
+                            <a href="#">
+                                <div class="photo">
+                                    <img src="images/파묘프로필.jpeg">
+                                </div><!--photo-->
+                                <div class="txt">
+                                    <p>최민식</p>
+                                    <span>김상덕 역</span>
                                 </div><!--txt-->
                             </a>
                         </div><!--people-->
@@ -286,15 +294,15 @@
                 <div class="info-wrapper">
                     <h3>스틸컷 <span>9</span></h3>
                     <div class="photo-wrapper">
-                        <a href="#"><img src="#"></a>
-                        <a href="#"><img src="#"></a>
-                        <a href="#"><img src="#"></a>
-                        <a href="#"><img src="#"></a>
-                        <a href="#"><img src="#"></a>
-                        <a href="#"><img src="#"></a>
-                        <a href="#"><img src="#"></a>
-                        <a href="#"><img src="#"></a>
-                        <a href="#"><img src="#"></a>
+                        <a href="#"><img src="images/파묘1.jpeg"></a>
+                        <a href="#"><img src="images/파묘2.jpeg"></a>
+                        <a href="#"><img src="images/파묘3.jpeg"></a>
+                        <a href="#"><img src="images/파묘4.jpeg"></a>
+                        <a href="#"><img src="images/파묘5.jpeg"></a>
+                        <a href="#"><img src="images/파묘6.jpeg"></a>
+                        <a href="#"><img src="images/파묘7.jpeg"></a>
+                        <a href="#"><img src="images/파묘8.jpeg"></a>
+                        <a href="#"><img src="images/파묘9.jpeg"></a>
                     </div><!--photo-wrapper-->
                 </div><!--info-wrapper-->
             </div><!--cont-item-->
