--- a/paintTest.html
+++ b/paintTest.html
@@ -13,7 +13,7 @@
         .paintWrap .item > div svg {position: absolute;top:50%;left: 50%;transform: translate(-50%, -50%);width: 90%;height:90%;}
         .paintWrap .item > .on svg {display: none;}
         .paintWrap .item > label {display:none;position: absolute;width: 100%;height: 100%;}
-        .result {display: none;position: absolute;top: 50%; left: 50%; transform: translate(-50%, -50%);color: #fff;}
+        .result {display: none;position: absolute;top: 50%; left: 50%; transform: translate(-50%, -50%);color: #fff;font-size: 36px;font-weight: bold;}
         /* 물감 svg */
         /* 물감 클릭 전 */
         .paint-fill {fill: #fff;}
