--- a/heart.html
+++ b/heart.html
@@ -17,14 +17,16 @@
         .heartWrap .heart .circle-line {display:none;width: 50%;height: 50%;animation: rotate 5s infinite linear;}
         .heartWrap .heart .heart-result {display:none;width: 80%;height: 80%;}
         .heartWrap .heart-svg {fill: none;stroke: #d52e04;stroke-miterlimit: 10;stroke-width: 10px;}
-        .heartWrap .line-svg {fill: none;stroke: red;stroke-miterlimit: 10;stroke-width: 10px;}
+        .heartWrap .line-svg {fill: none;stroke: #d52e04;stroke-miterlimit: 10;stroke-width: 10px;}
         .heartWrap .heart-fill {fill: #d52e04;stroke: #d52e04;stroke-miterlimit: 10;stroke-width: 10px;}
+        .heartWrap .result-text {display: none;position: fixed;top:50%;left:50%;transform: translate(-50%, -50%);background: #fff;width: 200px;height: 100px;padding: 50px;text-align: center;box-shadow: 0 0 5px rgba(0,0,0,.4);border-radius: 10px;}
         /* 클릭 이벤트 */
         input[id^="heartBtn"]:checked + label .heart-line {display: none;}
         input[id^="heartBtn"]:checked + label .circle-line {display: block;}
         #heartResult:checked ~ .heartWrap .h-item82 .heart-line {display: none;}
         #heartResult:checked ~ .heartWrap .h-item82 .heart-result {display: block;}
         #heartResult:checked ~ .time-bar > span {animation-play-state: paused;}
+        #heartResult:checked ~ .heartWrap .result-text {display: block;}
         @keyframes scale {
             100% {transform: translate(-50%, -50%) scale(.95);}
         }
@@ -1982,6 +1984,9 @@
                     </svg>
                 </div>
             </label>
+            <div class="result-text">
+                시간 안에 하트를 찾았군요! 축하합니다.
+            </div><!--result-text-->
         </div><!--heartWrap-->
     </div><!--heartFindBox-->
 </body>
