border-radius 수정

--- a/하단팝업.html
+++ b/하단팝업.html
@@ -7,7 +7,7 @@
     <style>
         .close-modal {display: none;}
         .modalWrap > .modal-bg {position: fixed;top:0;left: 0;z-index: 999;width: 100%;height: 100%;background: rgba(0,0,0,.5);}
-        .modalWrap > .modal {position: fixed;bottom:0;left: 0;width: 100%;z-index: 999;padding-bottom: 60%;border-radius:20px;background: pink;}
+        .modalWrap > .modal {position: fixed;bottom:0;left: 0;width: 100%;z-index: 999;padding-bottom: 60%;border-radius:20px 20px 0 0;background: pink;}
         .modalWrap > .modal > label {position: absolute;top:-30px;right: 20px;color: #fff;}
         #closeModal:checked + .modalWrap {display: none;}
     </style>
